--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -4,12 +4,14 @@
     <meta charset='utf-8'>
     <title>Board</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
-    
-    
+<body>  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="client.js"></script>
+
+  <h1>TABLE</h1>
+  <div id="root" class="container"></div>  
+
 </body>
 </html>
