Added form for the POST method

--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -13,5 +13,10 @@
   <h1>TABLE</h1>
   <div id="root" class="container"></div>  
 
+  <div class="container">
+    <br>
+    <a class="btn btn-primary" href="add.html" role="button">Add announcement</a>
+  </div>
+  
 </body>
 </html>
