add GET announcements in board_r.js, add title in announcements (fixed in add.html and script.js) [with Martina]

--- a/project-api/public/add.html
+++ b/project-api/public/add.html
@@ -14,6 +14,10 @@
   <div class="container">
     <form action="announcements" method="post" name="add" id="add">
       <div class="form-group">
+        <label for="insertTitle">Insert title</label>
+        <input type="text" class="form-text" id="title">
+      </div>
+      <div class="form-group">
         <label for="insertAuthor">Insert author</label>
         <input type="text" class="form-text" id="author">
       </div>
