Adding selectCategory function (not finished)

--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -11,6 +11,16 @@
   <script src="client.js"></script>
 
   <h1>TABLE</h1>
+
+  
+  <div class='sidenav'>
+    <br>
+    <p>Categorie:</p>
+    <a class="btn btn-primary" onclick="selectCat( '5fafb1e46adb2b2e08a00acd' )" role="button">Cat 1</a>
+    <a class="btn btn-primary" onclick="selectCat(2)" role="button">Cat 2</a>
+    <a class="btn btn-primary" onclick="selectCat(3)" role="button">Cat 3</a>
+  </div>
+  
   <div id="root" class="container"></div>  
 
   <div class="container">
