Added: add flyer option, select category, select views

--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -10,7 +10,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="client.js"></script>
 
-  <h1>TABLE</h1>
+  <h1>UNIVERSITY BULLETIN BOARD</h1>
+
+  <div class="container">
+    <br>
+    <a class="btn btn-primary" onclick="" role="button">All</a>
+    <a class="btn btn-primary" onclick="loadAnnouncements()" role="button">Announcements</a>
+    <a class="btn btn-primary" onclick="loadFlyers()" role="button">Flyers</a>
+  </div>
 
   
   <div class='sidenav'>
@@ -26,6 +33,8 @@
   <div class="container">
     <br>
     <a class="btn btn-primary" href="add.html" role="button">Add announcement</a>
+    <br><br>
+    <a class="btn btn-primary" href="addFly.html" role="button">Add flyer</a>
   </div>
   
 </body>
