--- a/project-api/public/addFly.html
+++ b/project-api/public/addFly.html
@@ -10,13 +10,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
 
-  <h1>ADD ANNOUNCEMENT</h1>
+  <h1>ADD FLYER</h1>
   <div class="container">
-    <form action="announcements" method="post" name="add" id="add">
-      <div class="form-group">
-        <label for="insertTitle">Insert title</label>
-        <input type="text" class="form-text" id="title">
-      </div>
+    <form action="flyers" method="post" name="add" id="add">
       <div class="form-group">
         <label for="insertAuthor">Insert author</label>
         <input type="text" class="form-text" id="author">
@@ -37,7 +33,7 @@
           <input class="form-control" type="date" value="1999-01-01" id="expiry_date">
         </div>
       </div>
-      <button type="button" onclick="addAnnouncement()" class="btn btn-primary">Insert new announcement</button>
+      <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new announcement</button>
       <button type="reset" class="btn btn-danger">Reset</button>
     </form>
   </div>
