--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -23,9 +23,9 @@
   <div class='sidenav'>
     <br>
     <p>Categorie:</p>
-    <a class="btn btn-primary" onclick="selectCat( '5fafb1e46adb2b2e08a00acd' )" role="button">Cat 1</a>
-    <a class="btn btn-primary" onclick="selectCat(2)" role="button">Cat 2</a>
-    <a class="btn btn-primary" onclick="selectCat(3)" role="button">Cat 3</a>
+    <a class="btn btn-primary" onclick="selectCat( '5fafb1e46adb2b2e08a00acd' )" role="button">Sassi</a>
+    <a class="btn btn-primary" onclick="selectCat( '5fb6e0ba2ae29813947c65aa' )" role="button">Libri</a>
+    <a class="btn btn-primary" onclick="selectCat( '5fb6e0cb2ae29813947c65ab' )" role="button">Gruppi studio</a>
   </div>
   
   <div id="root" class="container"></div>  
