Added print all the announcements and flyers

--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <br>
-    <a class="btn btn-primary" onclick="" role="button">All</a>
+    <a class="btn btn-primary" onclick="loadAll()" role="button">All</a>
     <a class="btn btn-primary" onclick="loadAnnouncements()" role="button">Announcements</a>
     <a class="btn btn-primary" onclick="loadFlyers()" role="button">Flyers</a>
   </div>
