Added custom.css, to modify boostrap's default

--- a/project-api/public/index.html
+++ b/project-api/public/index.html
@@ -7,6 +7,7 @@
     <title>Board</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
 
 </head>
 
@@ -28,18 +29,18 @@
   <div class='sidenav'>
     <br>
     <p>Categorie:</p>
-    <a class="btn btn-primary" onclick="selectCat( '5fafb1e46adb2b2e08a00acd' )" role="button">Sassi</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fb6e0ba2ae29813947c65aa' )" role="button">Libri</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fb6e0cb2ae29813947c65ab' )" role="button">Gruppi studio</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf40c795ed2391cb71979' )" role="button">Secretariat</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf3e9795ed2391cb71977' )" role="button">Rents</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf441795ed2391cb7197b' )" role="button">Study groups</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf402795ed2391cb71978' )" role="button">Books</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf448795ed2391cb7197c' )" role="button">Private lessons</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf415795ed2391cb7197a' )" role="button">Items</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf44e795ed2391cb7197d' )" role="button">Sport</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf455795ed2391cb7197e' )" role="button">Music</a>
-    <a class="btn btn-primary" onclick="selectCat( '5fbbf5b0795ed2391cb7197f' )" role="button">Uncategorised</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fafb1e46adb2b2e08a00acd' )" role="button">Sassi</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fb6e0ba2ae29813947c65aa' )" role="button">Libri</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fb6e0cb2ae29813947c65ab' )" role="button">Gruppi studio</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf40c795ed2391cb71979' )" role="button">Secretariat</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf3e9795ed2391cb71977' )" role="button">Rents</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf441795ed2391cb7197b' )" role="button">Study groups</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf402795ed2391cb71978' )" role="button">Books</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf448795ed2391cb7197c' )" role="button">Private lessons</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf415795ed2391cb7197a' )" role="button">Items</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf44e795ed2391cb7197d' )" role="button">Sport</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf455795ed2391cb7197e' )" role="button">Music</a>
+    <a class="btn btn-secondary" onclick="selectCat( '5fbbf5b0795ed2391cb7197f' )" role="button">Uncategorised</a>
     
   </div>
   
