--- a/project-api/public/addFly.html
+++ b/project-api/public/addFly.html
@@ -7,6 +7,7 @@
     <title>Board</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
 
 </head>
 
@@ -51,7 +52,7 @@
         </div>
       </div>
 
-      <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new announcement</button>
+      <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new flyer</button>
       <button type="reset" class="btn btn-danger">Reset</button>
 
     </form>
