--- a/project-api/public/add.html
+++ b/project-api/public/add.html
@@ -7,18 +7,34 @@
     <title>Board</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="custom.css">
+    <link rel="stylesheet" type="text/css" href="template.css">
 
 </head>
 
-<body onload="loadCategories()"> 
+<body onload="loadCategories()">  
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
 
-  <h1>ADD ANNOUNCEMENT</h1>
-  <div class="container">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="nav-link btn btn-dark" href="template.html" role="button">Go back<span class="sr-only"></span></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
 
+<!-- ----------------------------------------------------------------- -->
+
+<main role="main">
+      
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-8">Post new announcement</h1>
+      <p>Fill this form and then click "Insert new announcement" to post a new one on the digital board.</p>
+    </div>
+  </div>
+
+  <div class="container" id="root">
     <form action="announcements" method="post" name="add" id="add">
 
       <div class="form-group">
@@ -61,9 +77,16 @@
       <button type="reset" class="btn btn-danger">Reset</button>
 
     </form>
-    
-  </div>
 
+    <hr>
+
+  </div> <!-- /container -->
+
+</main>
+
+
+<!-- ------------------------------------------------------------------ -->
+ 
 </body>
 
 </html>
