--- a/project-api/public/addFly.html
+++ b/project-api/public/addFly.html
@@ -7,7 +7,7 @@
     <title>Board</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="custom.css">
+    <link rel="stylesheet" type="text/css" href="template.css">
 
 </head>
 
@@ -16,48 +16,71 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
 
-  <h1>ADD FLYER</h1>
-  <div class="container">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="nav-link btn btn-dark" href="template.html" role="button">Go back<span class="sr-only"></span></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
 
-    <form action="flyers" method="post" name="add" id="add">
+<!-- ----------------------------------------------------------------- -->
 
-      <div class="form-group">
-        <label for="insertAuthor">Insert author</label>
-        <input type="text" class="form-text" id="author">
-      </div>
-
-      <div class="form-group">
-        <!-- select category -->
-        Category: <select name="categories" id="cat">
-          <option value="" selected="selected">Select category</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label for="insertContent">Insert content</label>
-        <textarea class="form-control" id="content"></textarea>
-      </div>
-
-      <div class="form-group row">
-        <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
-        <div class="col-10">
-          <input class="form-control" type="date" value="1999-01-01" id="publish_date">
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <label for="insertExpiryDate" class="col-2 col-form-label">Insert expiry date</label>
-        <div class="col-10">
-          <input class="form-control" type="date" value="1999-01-01" id="expiry_date">
-        </div>
-      </div>
-
-      <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new flyer</button>
-      <button type="reset" class="btn btn-danger">Reset</button>
-
-    </form>
-
+<main role="main">
+      
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-8">Post new Flyer</h1>
+      <p>Fill this form and then click "Insert new flyer" to post a new one on the digital board.</p>
+    </div>
   </div>
+
+  <div class="container" id="root">
+      <form action="flyers" method="post" name="add" id="add">
+
+        <div class="form-group">
+          <label for="insertAuthor">Insert author</label>
+          <input type="text" class="form-text" id="author">
+        </div>
   
+        <div class="form-group">
+          <!-- select category -->
+          Category: <select name="categories" id="cat">
+            <option value="" selected="selected">Select category</option>
+          </select>
+        </div>
+  
+        <div class="form-group">
+          <label for="insertContent">Insert content</label>
+          <textarea class="form-control" id="content"></textarea>
+        </div>
+  
+        <div class="form-group row">
+          <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
+          <div class="col-10">
+            <input class="form-control" type="date" value="1999-01-01" id="publish_date">
+          </div>
+        </div>
+  
+        <div class="form-group row">
+          <label for="insertExpiryDate" class="col-2 col-form-label">Insert expiry date</label>
+          <div class="col-10">
+            <input class="form-control" type="date" value="1999-01-01" id="expiry_date">
+          </div>
+        </div>
+  
+        <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new flyer</button>
+        <button type="reset" class="btn btn-danger">Reset</button>
+  
+      </form>
+
+    <hr>
+
+  </div> <!-- /container -->
+
+</main>
+
+
+<!-- ------------------------------------------------------------------ -->
+ 
 </body>
 </html>
