Started to implement authentication and dotenv

--- a/local/search.html
+++ b/local/search.html
@@ -14,7 +14,7 @@
 
     <h1>SEARCH</h1>
     <div class="container">
-        <form action="search" method="get" name="search" id="search">
+        <div>
             <!-- <button type="button" onclick="randomSearch()" class="btn btn-primary">Generate random</button> -->
 
             <div class="form-group">
@@ -39,7 +39,7 @@
             </div>
 
             <button type="button" onclick="searchAnnouncements()" class="btn btn-primary">Search</button>
-        </form>
+        </div>
     </div>
 
     <h2>RESULT</h2>
