[with Lorenzo]started UI for the searchPage [unfinished]

--- a/local/index.html
+++ b/local/index.html
@@ -45,6 +45,7 @@
             </li>
           -->
           </ul>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="searchPage.html" role="button">Search</a>
         <!--
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
