--- a/local/addFly.html
+++ b/local/addFly.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container" id="root">
-      <form action="flyers" method="post" name="add" id="add">
+      <div name="add" id="add">
 
         <div class="form-group">
           <label for="insertAuthor">Insert author</label>
@@ -51,14 +51,14 @@
         </div>
 
         <div class="form-group">
-          <input name="image" type="file" id="fileinput" accept="image/*">
+          <input name="image" type="file" id="fileimage" accept="image/*">
         </div>
-        <!--
-          <div class="form-group">
+
+        <div class="form-group">
           <label for="insertContent">Insert content</label>
           <textarea class="form-control" id="content"></textarea>
         </div>
-        -->
+
 
         <div class="form-group row">
           <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
@@ -77,7 +77,7 @@
         <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new flyer</button>
         <button type="reset" class="btn btn-danger">Reset</button>
 
-      </form>
+      </div>
 
       <hr>
 
