--- a/local/index.html
+++ b/local/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="template.css">
 
 </head>
-<body>
+<body onload="loadCategoriesBtn()">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="client.js"></script>
@@ -76,6 +76,7 @@
 
         <div class="container" id="cat">
           <h5>Categories:</h5>
+          <!--
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf40c795ed2391cb71979' )" role="button">Secretariat</a>
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf3e9795ed2391cb71977' )" role="button">Rents</a>
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf441795ed2391cb7197b' )" role="button">Study groups</a>
@@ -85,6 +86,7 @@
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf44e795ed2391cb7197d' )" role="button">Sport</a>
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf455795ed2391cb7197e' )" role="button">Music</a>
           <a class="btn btn-secondary" onclick="selectCat( '5fbbf5b0795ed2391cb7197f' )" role="button">Uncategorised</a>
+          -->
         </div>
       
         <div class="container" id="root">
