--- a/local/add.html
+++ b/local/add.html
@@ -62,14 +62,14 @@
       <div class="form-group row">
         <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
         <div class="col-10">
-          <input class="form-control" type="date" value="1999-01-01" id="publish_date">
+          <input class="form-control" type="date" value="1999-01-01" id="publishDate">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="insertExpiryDate" class="col-2 col-form-label">Insert expiry date</label>
         <div class="col-10">
-          <input class="form-control" type="date" value="1999-01-01" id="expiry_date">
+          <input class="form-control" type="date" value="1999-01-01" id="expiryDate">
         </div>
       </div>
 
