Setted UI for invalid date [w/ Leonardo]

--- a/local/add.html
+++ b/local/add.html
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <button type="button" onclick="addAnnouncement()" class="btn btn-primary">Insert new announcement</button>
+      <button type="button" id="annBtn" onclick="addAnnouncement()" class="btn btn-primary" disabled>Insert new announcement</button>
       <button type="reset" class="btn btn-danger">Reset</button>
 
     </form>
