--- a/local/add.html
+++ b/local/add.html
@@ -62,7 +62,7 @@
       <div class="form-group row">
         <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
         <div class="col-10">
-          <input class="form-control" type="date" value="1999-01-01" id="publish_date" onchange="setExpiryDate()">
+          <input class="form-control" type="date" id="publish_date" onchange="setExpiryDate()">
         </div>
       </div>
 
