--- a/local/addFly.html
+++ b/local/addFly.html
@@ -16,6 +16,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
 
+  <!-- go back -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="nav-link btn btn-dark" href="index.html" role="button">Go back<span class="sr-only"></span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -35,21 +36,25 @@
       </div>
     </div>
 
+    <!-- container -->
+
     <div class="container" id="root">
       <form action="flyers" method="post" name="add" id="add">
 
+        <!-- insert author -->
         <div class="form-group">
           <label for="insertAuthor">Insert author</label>
           <input type="text" class="form-text" id="author">
         </div>
 
+        <!-- select category -->
         <div class="form-group">
-          <!-- select category -->
           Category: <select name="categories" id="cat">
             <option value="" selected="selected">Select category</option>
           </select>
         </div>
 
+        <!-- insert image -->
         <div class="form-group">
           <input name="image" type="file" id="fileinput" accept="image/*">
         </div>
@@ -60,6 +65,7 @@
         </div>
         -->
 
+        <!-- insert publish date -->
         <div class="form-group row">
           <label for="insertPublishDate" class="col-2 col-form-label">Insert publish date</label>
           <div class="col-10">
@@ -67,6 +73,7 @@
           </div>
         </div>
 
+        <!-- insert expiry date -->
         <div class="form-group row">
           <label for="insertExpiryDate" class="col-2 col-form-label">Insert expiry date</label>
           <div class="col-10">
@@ -74,6 +81,7 @@
           </div>
         </div>
 
+        <!-- add flyers buttons -->
         <button type="button" onclick="addFlyer()" class="btn btn-primary">Insert new flyer</button>
         <button type="reset" class="btn btn-danger">Reset</button>
 
@@ -81,7 +89,9 @@
 
       <hr>
 
-    </div> <!-- /container -->
+    </div> 
+    
+    <!-- /container -->
 
   </main>
 
