--- a/local/addFly.html
+++ b/local/addFly.html
@@ -56,7 +56,7 @@
 
         <!-- insert image -->
         <div class="form-group">
-          <input name="image" type="file" id="fileinput" accept="image/*">
+          <input name="image" type="file" id="fileimage" accept="image/*">
         </div>
         <!--
           <div class="form-group">
