Added register page and function for register a new user (main functionalities)

--- a/local/index.html
+++ b/local/index.html
@@ -52,6 +52,7 @@
           </form>
         -->
         <a class="nav-link btn btn-dark mr-sm-2" href="loginPage.html" role="button">Login<span class="sr-only"></span></a>
+        <a class="nav-link btn btn-dark mr-sm-2" href="registerPage.html" role="button">Register<span class="sr-only"></span></a>
         
         </div>
       </nav>
