Implemented UI for login

--- a/local/loginPage.html
+++ b/local/loginPage.html
@@ -46,8 +46,8 @@
       
         <div class="container" id="root">
             <div class="form-group">
-                <label for="insertUsername">Username:</label> <!--email??????-->
-                <input type="text" class="form-text" id="username" required>
+                <label for="insertUsername">Email:</label> <!--email??????-->
+                <input type="text" class="form-text" id="email" required>
               </div>
         
               <div class="form-group">
