--- a/local/index.html
+++ b/local/index.html
@@ -53,7 +53,7 @@
         -->
         <a class="nav-link btn btn-dark mr-sm-2" href="loginPage.html" role="button">Login<span class="sr-only"></span></a>
         <a class="nav-link btn btn-dark mr-sm-2" href="registerPage.html" role="button">Register<span class="sr-only"></span></a>
-        
+        <a class="nav-link btn btn-dark mr-sm-2" onclick="checkAuth()" role="button">User Page<span class="sr-only"></span></a>
         </div>
       </nav>
       
