--- a/local/index.html
+++ b/local/index.html
@@ -15,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="client.js"></script>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
         <a class="nav-link btn btn-dark" href="index.html" role="button">Home<span class="sr-only"></span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -64,6 +64,7 @@
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
           <div class="container">
+            <img class="float-left d-block" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.ing.unitn.it%2F~pugno%2Fimages%2FLogo_Trento_Color_NOTEXT.jpeg&f=1&nofb=1" width="100" height="100">
             <h1 class="display-5">University Bulletin Board</h1>
             <p>This is a web version of the bulleting board we are used to see in the coffee room of the univeristy.</p>
             <p><a class="btn btn-primary btn-lg" href="https://www.unitn.it/" role="button">University Website &raquo;</a>
@@ -74,13 +75,14 @@
             <a class="btn btn-info" href="addFly.html" role="button">Add flyer</a>
             <br><br>
           </div>
+          <hr class="red-line">
         </div>
 
         <!-- categories' buttons -->
         <div class="container" id="cat">
           <h5>Categories:</h5>
         </div>
-      
+
         <!-- announcements and flyers columns -->
         <div class="container" id="root">
           <div class="row">
@@ -98,7 +100,7 @@
       
       <!-- group description -->
       <footer class="container">
-        <p>Software Engineering Project - Group 1 [Godi, Vincoli, Zanrosso, Xompero]</p>
+        <p>Software Engineering Project - Group 1 [Godi, Vincoli, Xompero, Zanrosso]</p>
       </footer>
 
 </body>
