Fixed flyers, modified UI

--- a/local/addFly.html
+++ b/local/addFly.html
@@ -17,7 +17,7 @@
   <script src="script.js"></script>
 
   <!-- go back -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <a class="nav-link btn btn-dark" href="index.html" role="button">Go back<span class="sr-only"></span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
           </div>
         </div>
 
-        <button type="button" onclick="addFlyer()" class="btn btn-primary" disabled>Insert new flyer</button>
+        <button type="button" id="annBtn" onclick="addFlyer()" class="btn btn-primary" disabled>Insert new flyer</button>
         <button type="reset" class="btn btn-danger">Reset</button>
 
       </form>
