Disabled buttons for authentication

--- a/local/index.html
+++ b/local/index.html
@@ -71,8 +71,8 @@
             <a class="btn btn-primary btn-lg" href="https://www.esse3.unitn.it/Home.do" role="button">Esse3 &raquo;</a></p>
           </div>
           <div class="container">
-            <a class="btn btn-info" href="add.html" role="button">Add announcement</a>
-            <a class="btn btn-info" href="addFly.html" role="button">Add flyer</a>
+            <a id="linkAddAnn" class="btn btn-info" href="add.html" role="button">Add announcement</a>
+            <a id="linkAddFly" class="btn btn-info" href="addFly.html" role="button" disabled>Add flyer</a>
             <br><br>
           </div>
           <hr class="red-line">
