--- a/local/index.html
+++ b/local/index.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <button class="nav-link btn-dark" onclick="loadAnnouncements()">Announcements<span class="sr-only"></span></button>
+              <button class="nav-link btn btn-dark" role="button" onclick="loadAnnouncements()">Announcements<span class="sr-only"></span></button>
             </li>
             <li class="nav-item active">
-              <button class="nav-link btn-dark" onclick="loadFlyers()">Flyers<span class="sr-only"></span></button>
+              <button class="nav-link btn btn-dark" role="button" onclick="loadFlyers()">Flyers<span class="sr-only"></span></button>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -46,7 +46,7 @@
             </li>
           -->
           </ul>
-          <a class="btn btn-success my-2 my-sm-0" href="searchPage.html" role="button">Search</a>
+         
         <!--
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -56,6 +56,7 @@
         <a class="nav-link btn btn-dark mr-sm-2" href="loginPage.html" role="button">Login<span class="sr-only"></span></a>
         <a class="nav-link btn btn-dark mr-sm-2" href="registerPage.html" role="button">Register<span class="sr-only"></span></a>
         <a class="nav-link btn btn-dark mr-sm-2" onclick="checkAuth()" role="button">User Page<span class="sr-only"></span></a>
+        <a class="btn btn-success my-2 my-sm-0" href="searchPage.html" role="button">Search</a>
         </div>
       </nav>
       
