[work group] fixing problems

--- a/local/addFly.html
+++ b/local/addFly.html
@@ -41,6 +41,12 @@
     <div class="container" id="root">
       <form action="flyers" method="post" name="add" id="add">
 
+        <!-- insert title -->
+        <div class="form-group">
+          <label for="insertTitle">Insert title</label>
+          <input type="text" class="form-text" id="title">
+        </div>
+
         <!-- insert author -->
         <div class="form-group">
           <label for="insertAuthor">Insert author</label>
