fixing problems here and there [group work]

--- a/local/add.html
+++ b/local/add.html
@@ -55,16 +55,16 @@
         </select>
       </div>
 
-      <!-- insert author -->
-      <div class="form-group">
-        <label for="insertAuthor">Insert author</label>
-        <input type="text" class="form-text" id="author">
-      </div>
-
       <!-- insert content -->
       <div class="form-group">
         <label for="insertContent">Insert content</label>
         <textarea class="form-control" id="content"></textarea>
+      </div>
+
+      <!-- insert contact -->
+      <div class="form-group">
+        <label for="insertContact">Insert contact</label>
+        <textarea class="form-control" id="contact"></textarea>
       </div>
 
       <!-- insert publish date -->
