--- a/local/addFly.html
+++ b/local/addFly.html
@@ -47,12 +47,6 @@
           <input type="text" class="form-text" id="title">
         </div>
 
-        <!-- insert author -->
-        <div class="form-group">
-          <label for="insertAuthor">Insert author</label>
-          <input type="text" class="form-text" id="author">
-        </div>
-
         <!-- select category -->
         <div class="form-group">
           Category: <select name="categories" id="cat">
@@ -70,6 +64,12 @@
           <textarea class="form-control" id="content"></textarea>
         </div>
         -->
+
+        <!-- insert contact -->
+        <div class="form-group">
+          <label for="insertContact">Insert contact</label>
+          <textarea class="form-control" id="contact"></textarea>
+        </div>
 
         <!-- insert publish date -->
         <div class="form-group row">
