--- a/local/userspace.html
+++ b/local/userspace.html
@@ -13,7 +13,7 @@
 <body onload="loadCategoriesBtn()">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="client.js"></script>
+    <script src="privateclient.js"></script>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
         <a class="nav-link btn btn-dark" href="index.html" role="button">Home<span class="sr-only"></span></a>
