Added red line on every page

--- a/local/add.html
+++ b/local/add.html
@@ -33,6 +33,7 @@
       <h1 class="display-8">Post new announcement</h1>
       <p>Fill this form and then click "Insert new announcement" to post a new one on the digital board.</p>
     </div>
+    <hr class="red-line">
   </div>
 
   <!-- container -->
