--- a/local/addFly.html
+++ b/local/addFly.html
@@ -34,6 +34,7 @@
         <h1 class="display-8">Post new Flyer</h1>
         <p>Fill this form and then click "Insert new flyer" to post a new one on the digital board.</p>
       </div>
+      <hr class="red-line">
     </div>
 
     <!-- container -->
