--- a/local/loginPage.html
+++ b/local/loginPage.html
@@ -42,6 +42,7 @@
             <p>This is a web version of the bulleting board we are used to see in the coffee room of the univeristy. <br>
                 Please log in order to be able to post. </p>
           </div>
+          <hr class="red-line">
         </div>
       
         <div class="container" id="root">
