--- a/local/searchPage.html
+++ b/local/searchPage.html
@@ -29,6 +29,7 @@
             <h1 class="display-8">Search</h1>
             <p>Fill this form and then click "Search" to search through the posts on the board.</p>
           </div>
+          <hr class="red-line">
         </div>
 
         <div class="container" id="form-container">
