--- a/local/userspace.html
+++ b/local/userspace.html
@@ -71,6 +71,7 @@
             <a class="btn btn-info" href="addFly.html" role="button">Add flyer</a>
             <br><br>
           </div>
+          <hr class="red-line">
         </div>
       
         <!-- categories' buttons -->
