Fixed all the things

--- a/local/loginPage.html
+++ b/local/loginPage.html
@@ -49,13 +49,13 @@
         <div class="container" id="root">
           <div class="form-group">
             <label for="insertUsername">Email:</label>
-            <input type="text" class="form-text" id="email" required>
+            <input type="text" class="form-text" id="email" value="prova@prova.com" required>
           </div>
         
           <!-- insert password -->
           <div class="form-group">
             <label for="insertPassword">Password:</label>
-            <input type="password" class="form-text" id="password" required>
+            <input type="password" class="form-text" value="provaprova" id="password" required>
           </div>
 
           <button onclick="login()" class="btn btn-success">LOGIN</button>
