--- a/local/userspace.html
+++ b/local/userspace.html
@@ -81,6 +81,14 @@
 
         <!-- announcements and flyers columns -->
         <div class="container" id="root">
+          <div class="row">
+            <div class="col-8">
+              <div class="containerA" id="rootA"></div>
+            </div>
+              <div class="col-4">
+              <div class="containerF" id="rootF"></div>
+            </div>
+          </div>
           <hr> 
         </div> 
       
