--- a/local/searchPage.html
+++ b/local/searchPage.html
@@ -37,27 +37,10 @@
             <div class="container" id="formBox">
                 <div id="search">
 
-                    <div class="form-group">
-                        <label for="insertText">Text (in Title or Content)</label>
-                        <input type="text" class="form-text" id="includes" name="includes">
+                  <div class="form-group">
+                    <label for="insertText">Text (in Title or Content)</label>
+                    <input type="text" class="form-text" id="includes" name="includes">
 
-                    <!--
-                    <div class="form-group row">
-                        <label for="insertPublishDate" class="col-2 col-form-label">Publish date</label>
-                        <div class="col-3">
-                            <p>From: <input class="form-control" type="date" id="from_publish" name="from_publish"></p>
-                            <p>To: <input class="form-control" type="date" id="to_publish" name="to_publish"></p>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label for="insertExpiryDate" class="col-2 col-form-label">Expiry date</label>
-                        <div class="col-3">
-                            <p>From: <input class="form-control" type="date" id="from_expiry" name="from_expiry"></p>
-                            <p>To: <input class="form-control" type="date" id="to_expiry" name="to_expiry"></p>
-                        </div>
-                    </div>
-                -->
                     <button type="button" onclick="searchAnnouncements()" class="btn btn-primary">Search</button>
                     <button type="reset" class="btn btn-danger">Reset</button>
                   </div>
@@ -82,7 +65,7 @@
 
     <footer class="container">
       <hr>
-      <p>Software Engineering Project - Group 1 [Godi, Vincoli, Zanrosso, Xompero]</p>
+      <p>Software Engineering Project - Group 1 [Godi, Vincoli, Xompero, Zanrosso]</p>
     </footer>
 
 
